--- a/Contenido/PR.html
+++ b/Contenido/PR.html
@@ -41,8 +41,64 @@
     <section id="experiencia">
         <h2>Experiencia Laboral</h2>
         <ul>
-            <li><strong>Freelancer en Marketing Digital</strong> - Creación de contenido para redes sociales y blogs (2022 - Actualidad)</li>
-            <li><strong>Diseñador Web - Level Up</strong> - Diseño de interfaces y landing pages (2024)</li>
+            <li><strong><u>Coordinador de Ventas y E-commerce</u></strong>
+                <br>
+                <strong><u>MB Store - Noviembre 2024 - febrero 2025</u></strong>
+                <br>
+                Atención al cliente, coordinación de envíos y gestión de contenido en Mercado Libre. Creación y
+                administración de una tienda online en Shopify con más de 1000 productos. Gestión de redes
+                sociales y estrategias de marketing digital. Supervisión de backoffice, resolución de incidencias y
+                análisis de datos de ventas para optimizar procesos, mejorar la experiencia del cliente y
+                aumentar el rendimiento en plataformas digitales.</li>
+        </ul>
+        <ul>
+            <li><strong><u>Especialista en E-commerce y Marketing Digital</u></strong>
+                <br>
+                <strong><u>MB Store - Noviembre 2024 - febrero 2025</u></strong>
+                <br>
+                Gestión de plataformas de venta como Mercado Libre, incluyendo carga y optimización de
+                productos. Desarrollo y administración de una tienda online en Shopify con más de 1000
+                artículos. Creación de estrategias de marketing digital y gestión de redes sociales para
+                aumentar el alcance y la interacción. Análisis de datos de ventas y comportamiento del cliente
+                para mejorar resultados. Optimización de procesos logísticos y atención personalizada al cliente.</li>
+        </ul>
+        <ul>
+            <li><strong><u>Asistente Comercial y de E-commerce</u></strong>
+                <br>
+                <strong><u>MB Store - Noviembre 2024 - febrero 2025</u></strong>
+                <br>
+                Atención personalizada al cliente y coordinación de envíos en Mercado Libre. Gestión y
+                actualización de contenido, supervisión de backoffice y resolución de incidencias. Desarrollo de
+                una tienda online en Shopify, cargando y organizando más de 1000 productos. Creación de
+                estrategias de marketing digital y gestión de redes sociales. Optimización de procesos logísticos
+                y análisis de datos para mejorar el rendimiento y aumentar las ventas en plataformas digitales.</li>
+        </ul>
+        <ul>
+            <li><strong><u>Community manager</u></strong>
+                <br>
+                <strong><u>Estética Patricia - Julio 2024 - Noviembre 2024</u></strong>
+                <br>
+                Encargado de la creación, gestión y actualización de contenido para el blog y redes sociales de
+                la empresa, incluyendo redacción de artículos, diseño de publicaciones visualmente atractivas, y
+                planificación de estrategias de contenido para mejorar la visibilidad y el alcance en línea.
+                Supervisión de interacciones en redes sociales, análisis del rendimiento de las publicaciones y
+                ajuste de la estrategia de acuerdo a los resultados obtenidos.</li>
+        </ul>
+        <ul>
+            <li><strong><u>Diseñador Web y Creador de Proyectos de Marketing.</u></strong>
+                <br>
+                <strong><u>SharkFit - Noviembre 2022 - Agosto 2023s</u></strong>
+                <br>
+                Diseño de pagina web de la empresa, diseño de slogans para publicidad digital. Mantenimiento
+                de redes sociales y del Blog de la pagina web.</li>
+        </ul>
+        <ul>
+            <li><strong><u>Diseñador freelance</u></strong>
+                <br>
+                <strong><u>Estética Patricia - Marzo 2022 - Agosto 2023</u></strong>
+                <br>
+                Diseñar y crear ilustraciones, publicaciones para redes sociales, folletos y ofrecer
+                asesoramiento profesional y entregar trabajos de alta calidad dentro de los plazos establecidos.</li>
         </ul>
     </section>
 
