git commit -m "confirmo cambios"

--- a/Contenido/PR.html
+++ b/Contenido/PR.html
@@ -105,9 +105,9 @@
     <section id="estudios">
         <h2>Estudios</h2>
         <ul>
-            <li><strong>Primaria:</strong> Escuela Nº 123</li>
-            <li><strong>Secundaria:</strong> Liceo Nº 45</li>
-            <li><strong>Bachillerato:</strong> Humanístico</li>
+            <li><strong>Primaria:</strong> Escuela Nº 89 Juana de Ibaborou.</li>
+            <li><strong>Secundaria:</strong> Liceo Nº 1 Ciudad del Plata</li>
+            <li><strong>Bachillerato:</strong> Derecho </li>
             <li><strong>Beca:</strong> Alianza Cultural Uruguay-EEUU (Programación Web)</li>
         </ul>
     </section>
