--- a/Contenido/PR.html
+++ b/Contenido/PR.html
@@ -115,13 +115,41 @@
     <section id="cursos">
         <h2>Cursos</h2>
         <ul>
-            <li>Operador PC</li>
-            <li>Reparador de PC</li>
-            <li>Marketing Digital Aplicado</li>
-            <li>Desarrollo Front-End (en progreso)</li>
+            <li>Certificado Git y GitHub - TodoCode - <strong>Noviembre 2024</strong></li>
+            <li>Marketing digital para E-commerce - Universidad de Palermo - <strong>Febrero 2024 - Junio 2024</strong></li>
+            <li>E-Business: Negocios Online - Universidad de Palermo - <strong>Noviembre 2023 - Febrero 2024</strong></li>
+            <li>Diseño de Prototipos y Wireframes con Figma - <strong>Febrero 2024 - Marzo 2024</strong></li>
+            <li>Marketing Digital Aplicado, Sempai Academy - <strong>Octubre 2023 - Febrero 2024</strong></li>
+            <li>Concepstos basicos de JavaScript, Univercidad de California, Davis - <strong>Octubre 2023 - Diciembre 2023</strong></li>
+            <li>Elementos visuales de (UX), Instituto de Artes de California - <strong>Octubre 2023 - Noviembre 2023</strong></li>
+            <li>Diseño y Desarrollo de un sitio Web usando Figma - <strong>Setiembre 2023 - Octubre 2023</strong></li>
+            <li>Fundamentos de Programación con JavaScript y Css, Univercidad De Duke - <strong>Agosto 2023 - Setiembre 2023</strong></li>
+            <li>Escuel en reparacion y mantenimiento de Pc, Escuela MA-PA - <strong>Noviembre 2015 - Mayo 2016</strong></li>
+            <li>Operador PC Windows, Escuela MA-PA - <strong>Mayo 2015 - Octubre 2015</strong></li>
+            <li>Diseño Grafico, Intituto BIOS - <strong>Octubre de 2013 - Febrero 2014</strong></li>
         </ul>
     </section>
 
+    <section id="Certificados">
+        <img src="./img/Certificados/Certificado de Ciencias de la Computacion.pdf" alt="">
+        <img src="./img/Certificados/Certificado Git y GitHub - TodoCode.pdf" alt="">
+        <img src="img/Certificados/Certificate Marketing Digital Aplicado.pdf" alt="">
+        <img src="img/Certificados/Certificate Progrmacion Alianza.pdf" alt="">
+        <img src="img/Certificados/Coursera 4KMN37YBMDQ9.pdf" alt="">
+        <img src="img/Certificados/Coursera ATA8ATJCE372.pdf" alt="">
+        <img src="img/Certificados/Coursera B4PTE22368E4.pdf" alt="">
+        <img src="img/Certificados/Coursera D4P83TSW5795.pdf" alt="">
+        <img src="img/Certificados/Coursera EKMRTWJVZGPY.pdf" alt="">
+        <img src="img/Certificados/Coursera HCNC5CS7UXSJ.pdf" alt="">
+        <img src="img/Certificados/Coursera JCW48TBJQWJ3.pdf" alt="">
+        <img src="img/Certificados/Coursera KFXLY2EM7XEU.pdf" alt="">
+        <img src="img/Certificados/Coursera KVWDGSGE7HV5.pdf" alt="">
+        <img src="img/Certificados/Coursera NWUQSNW78JZ7.pdf" alt="">
+        <img src="img/Certificados/Coursera XS5QK1ADRGFA.pdf" alt="">
+        <img src="img/Certificados/Couserea Certificado.pdf" alt="">
+        <img src="img/Certificados/certificate-curso-gratuito-de-introduccion-al-desarrollo-web-64b811456b68834ed50de4b8.pdf" alt="">
+
+    </section>
     <section id="proyectos">
         <h2>Mis Proyectos</h2>
         <div class="proyectos-container">
