git add git commit -m "confirmo cambios" git status

--- a/Contenido/PR.html
+++ b/Contenido/PR.html
@@ -131,25 +131,95 @@
     </section>
 
     <section id="Certificados">
-        <img src="./img/Certificados/Certificado de Ciencias de la Computacion.pdf" alt="">
-        <img src="./img/Certificados/Certificado Git y GitHub - TodoCode.pdf" alt="">
-        <img src="img/Certificados/Certificate Marketing Digital Aplicado.pdf" alt="">
-        <img src="img/Certificados/Certificate Progrmacion Alianza.pdf" alt="">
-        <img src="img/Certificados/Coursera 4KMN37YBMDQ9.pdf" alt="">
-        <img src="img/Certificados/Coursera ATA8ATJCE372.pdf" alt="">
-        <img src="img/Certificados/Coursera B4PTE22368E4.pdf" alt="">
-        <img src="img/Certificados/Coursera D4P83TSW5795.pdf" alt="">
-        <img src="img/Certificados/Coursera EKMRTWJVZGPY.pdf" alt="">
-        <img src="img/Certificados/Coursera HCNC5CS7UXSJ.pdf" alt="">
-        <img src="img/Certificados/Coursera JCW48TBJQWJ3.pdf" alt="">
-        <img src="img/Certificados/Coursera KFXLY2EM7XEU.pdf" alt="">
-        <img src="img/Certificados/Coursera KVWDGSGE7HV5.pdf" alt="">
-        <img src="img/Certificados/Coursera NWUQSNW78JZ7.pdf" alt="">
-        <img src="img/Certificados/Coursera XS5QK1ADRGFA.pdf" alt="">
-        <img src="img/Certificados/Couserea Certificado.pdf" alt="">
-        <img src="img/Certificados/certificate-curso-gratuito-de-introduccion-al-desarrollo-web-64b811456b68834ed50de4b8.pdf" alt="">
+        <h2>Certificados</h2>
+        <br>
+        <div class="certificaciones-container">
+            <div class="certificacion">
+                <embed src="./img/Certificados/Certificado de Ciencias de la Computacion.pdf" type="application/pdf">
+                <h3>Certificado en Programación Web</h3>
+                <a href="./img/Certificados/Certificado de Ciencias de la Computacion.pdf" target="_blank" class="btn">Ver Certificado</a>
+            </div>
+            <div class="certificacion">
+                <embed src="./img/Certificados/Certificado Git y GitHub - TodoCode.pdf" type="application/pdf">
+                <h3>Certificado en Programación Web</h3>
+                <a href="./img/Certificados/Certificado Git y GitHub - TodoCode.pdf" target="_blank" class="btn">Ver Certificado</a>
+            </div>
+            <div class="certificacion">
+                <embed src="./img/Certificados/Certificate Marketing Digital Aplicado.pdf" type="application/pdf">
+                <h3>Certificado en Programación Web</h3>
+                <a href="./img/Certificados/Certificate Progrmacion Alianza.pdf" target="_blank" class="btn">Ver Certificado</a>
+            </div>
+            <div class="certificacion">
+                <embed src="./img/Certificados/certificate-curso-gratuito-de-introduccion-al-desarrollo-web-64b811456b68834ed50de4b8.pdf" type="application/pdf">
+                <h3>Certificado en Programación Web</h3>
+                <a href="./img/Certificados/certificate-curso-gratuito-de-introduccion-al-desarrollo-web-64b811456b68834ed50de4b8.pdf" target="_blank" class="btn">Ver Certificado</a>
+            </div>
+            <div class="certificacion">
+                <embed src="./img/Certificados/Coursera 4KMN37YBMDQ9.pdf" type="application/pdf">
+                <h3>Certificado en Programación Web</h3>
+                <a href="./img/Certificados/Coursera 4KMN37YBMDQ9.pdf" target="_blank" class="btn">Ver Certificado</a>
+            </div>
+            <div class="certificacion">
+                <embed src="./img/Certificados/Coursera ATA8ATJCE372.pdf" type="application/pdf">
+                <h3>Certificado en Programación Web</h3>
+                <a href="./img/Certificados/Coursera ATA8ATJCE372.pdf" target="_blank" class="btn">Ver Certificado</a>
+            </div>
+            <div class="certificacion">
+                <embed src="./img/Certificados/Coursera B4PTE22368E4.pdf" type="application/pdf">
+                <h3>Certificado en Programación Web</h3>
+                <a href="./img/Certificados/Coursera B4PTE22368E4.pdf" target="_blank" class="btn">Ver Certificado</a>
+            </div>
+            <div class="certificacion">
+                <embed src="./img/Certificados/Coursera D4P83TSW5795.pdf" type="application/pdf">
+                <h3>Certificado en Programación Web</h3>
+                <a href="./img/Certificados/Coursera D4P83TSW5795.pdf" target="_blank" class="btn">Ver Certificado</a>
+            </div>
+            <div class="certificacion">
+                <embed src="./img/Certificados/Coursera EKMRTWJVZGPY.pdf" type="application/pdf">
+                <h3>Certificado en Programación Web</h3>
+                <a href="./img/Certificados/Coursera EKMRTWJVZGPY.pdf" target="_blank" class="btn">Ver Certificado</a>
+            </div>
+            <div class="certificacion">
+                <embed src="./img/Certificados/Coursera HCNC5CS7UXSJ.pdf" type="application/pdf">
+                <h3>Certificado en Programación Web</h3>
+                <a href="./img/Certificados/Coursera HCNC5CS7UXSJ.pdf" target="_blank" class="btn">Ver Certificado</a>
+            </div>
+            <div class="certificacion">
+                <embed src="./img/Certificados/Coursera JCW48TBJQWJ3.pdf" type="application/pdf">
+                <h3>Certificado en Programación Web</h3>
+                <a href="./img/Certificados/Coursera JCW48TBJQWJ3.pdf" target="_blank" class="btn">Ver Certificado</a>
+            </div>
+            <div class="certificacion">
+                <embed src="./img/Certificados/Coursera KFXLY2EM7XEU.pdf" type="application/pdf">
+                <h3>Certificado en Programación Web</h3>
+                <a href="./img/Certificados/Coursera KFXLY2EM7XEU.pdf" target="_blank" class="btn">Ver Certificado</a>
+            </div>
+            <div class="certificacion">
+                <embed src="./img/Certificados/Coursera KVWDGSGE7HV5.pdf" type="application/pdf">
+                <h3>Certificado en Programación Web</h3>
+                <a href="./img/Certificados/Coursera KVWDGSGE7HV5.pdf" target="_blank" class="btn">Ver Certificado</a>
+            </div>
+            <div class="certificacion">
+                <embed src="./img/Certificados/Coursera NWUQSNW78JZ7.pdf" type="application/pdf">
+                <h3>Certificado en Programación Web</h3>
+                <a href="./img/Certificados/Coursera NWUQSNW78JZ7.pdf" target="_blank" class="btn">Ver Certificado</a>
+            </div>
+            <div class="certificacion">
+                <embed src="./img/Certificados/Coursera XS5QK1ADRGFA.pdf" type="application/pdf">
+                <h3>Certificado en Programación Web</h3>
+                <a href="./img/Certificados/Coursera XS5QK1ADRGFA.pdf" target="_blank" class="btn">Ver Certificado</a>
+            </div>
+            <div class="certificacion">
+                <embed src="./img/Certificados/Couserea Certificado.pdf" type="application/pdf">
+                <h3>Certificado en Programación Web</h3>
+                <a href="./img/Certificados/Couserea Certificado.pdf" target="_blank" class="btn">Ver Certificado</a>
+            </div>
+        </div>
+    
 
     </section>
+
+
     <section id="proyectos">
         <h2>Mis Proyectos</h2>
         <div class="proyectos-container">
