--- a/Contenido/PR.html
+++ b/Contenido/PR.html
@@ -136,89 +136,88 @@
         <div class="certificaciones-container">
             <div class="certificacion">
                 <embed src="./img/Certificados/Certificado de Ciencias de la Computacion.pdf" type="application/pdf">
-                <h3>Certificado en Programación Web</h3>
+                <h3>Certificado de Ciencias de la Computacion</h3>
                 <a href="./img/Certificados/Certificado de Ciencias de la Computacion.pdf" target="_blank" class="btn">Ver Certificado</a>
             </div>
             <div class="certificacion">
                 <embed src="./img/Certificados/Certificado Git y GitHub - TodoCode.pdf" type="application/pdf">
-                <h3>Certificado en Programación Web</h3>
+                <h3>Certificado Git y GitHub</h3>
                 <a href="./img/Certificados/Certificado Git y GitHub - TodoCode.pdf" target="_blank" class="btn">Ver Certificado</a>
             </div>
             <div class="certificacion">
                 <embed src="./img/Certificados/Certificate Marketing Digital Aplicado.pdf" type="application/pdf">
-                <h3>Certificado en Programación Web</h3>
-                <a href="./img/Certificados/Certificate Progrmacion Alianza.pdf" target="_blank" class="btn">Ver Certificado</a>
+                <h3>Certificate Marketing Digital Aplicado</h3>
+                <a href="./img/Certificados/Certificate Marketing Digital Aplicado.pdf" target="_blank" class="btn">Ver Certificado</a>
             </div>
             <div class="certificacion">
                 <embed src="./img/Certificados/certificate-curso-gratuito-de-introduccion-al-desarrollo-web-64b811456b68834ed50de4b8.pdf" type="application/pdf">
-                <h3>Certificado en Programación Web</h3>
+                <h3>Certificate curso gratuito de introduccion al desarrollo web</h3>
                 <a href="./img/Certificados/certificate-curso-gratuito-de-introduccion-al-desarrollo-web-64b811456b68834ed50de4b8.pdf" target="_blank" class="btn">Ver Certificado</a>
             </div>
             <div class="certificacion">
                 <embed src="./img/Certificados/Coursera 4KMN37YBMDQ9.pdf" type="application/pdf">
-                <h3>Certificado en Programación Web</h3>
+                <h3>Certificado de Coursera</h3>
                 <a href="./img/Certificados/Coursera 4KMN37YBMDQ9.pdf" target="_blank" class="btn">Ver Certificado</a>
             </div>
             <div class="certificacion">
                 <embed src="./img/Certificados/Coursera ATA8ATJCE372.pdf" type="application/pdf">
-                <h3>Certificado en Programación Web</h3>
+                <h3>Certificado de Coursera</h3>
                 <a href="./img/Certificados/Coursera ATA8ATJCE372.pdf" target="_blank" class="btn">Ver Certificado</a>
             </div>
             <div class="certificacion">
                 <embed src="./img/Certificados/Coursera B4PTE22368E4.pdf" type="application/pdf">
-                <h3>Certificado en Programación Web</h3>
+                <h3>Certificado de Coursera</h3>
                 <a href="./img/Certificados/Coursera B4PTE22368E4.pdf" target="_blank" class="btn">Ver Certificado</a>
             </div>
             <div class="certificacion">
                 <embed src="./img/Certificados/Coursera D4P83TSW5795.pdf" type="application/pdf">
-                <h3>Certificado en Programación Web</h3>
+                <h3>Certificado de Coursera</h3>
                 <a href="./img/Certificados/Coursera D4P83TSW5795.pdf" target="_blank" class="btn">Ver Certificado</a>
             </div>
             <div class="certificacion">
                 <embed src="./img/Certificados/Coursera EKMRTWJVZGPY.pdf" type="application/pdf">
-                <h3>Certificado en Programación Web</h3>
+                <h3>Certificado de Coursera</h3>
                 <a href="./img/Certificados/Coursera EKMRTWJVZGPY.pdf" target="_blank" class="btn">Ver Certificado</a>
             </div>
             <div class="certificacion">
                 <embed src="./img/Certificados/Coursera HCNC5CS7UXSJ.pdf" type="application/pdf">
-                <h3>Certificado en Programación Web</h3>
+                <h3>Certificado de Coursera</h3>
                 <a href="./img/Certificados/Coursera HCNC5CS7UXSJ.pdf" target="_blank" class="btn">Ver Certificado</a>
             </div>
             <div class="certificacion">
                 <embed src="./img/Certificados/Coursera JCW48TBJQWJ3.pdf" type="application/pdf">
-                <h3>Certificado en Programación Web</h3>
+                <h3>Certificado de Coursera</h3>
                 <a href="./img/Certificados/Coursera JCW48TBJQWJ3.pdf" target="_blank" class="btn">Ver Certificado</a>
             </div>
             <div class="certificacion">
                 <embed src="./img/Certificados/Coursera KFXLY2EM7XEU.pdf" type="application/pdf">
-                <h3>Certificado en Programación Web</h3>
+                <h3>Certificado de Coursera</h3>
                 <a href="./img/Certificados/Coursera KFXLY2EM7XEU.pdf" target="_blank" class="btn">Ver Certificado</a>
             </div>
             <div class="certificacion">
                 <embed src="./img/Certificados/Coursera KVWDGSGE7HV5.pdf" type="application/pdf">
-                <h3>Certificado en Programación Web</h3>
+                <h3>Certificado de Coursera</h3>
                 <a href="./img/Certificados/Coursera KVWDGSGE7HV5.pdf" target="_blank" class="btn">Ver Certificado</a>
             </div>
             <div class="certificacion">
                 <embed src="./img/Certificados/Coursera NWUQSNW78JZ7.pdf" type="application/pdf">
-                <h3>Certificado en Programación Web</h3>
+                <h3>Certificado de Coursera</h3>
                 <a href="./img/Certificados/Coursera NWUQSNW78JZ7.pdf" target="_blank" class="btn">Ver Certificado</a>
             </div>
             <div class="certificacion">
                 <embed src="./img/Certificados/Coursera XS5QK1ADRGFA.pdf" type="application/pdf">
-                <h3>Certificado en Programación Web</h3>
+                <h3>Certificado de Coursera</h3>
                 <a href="./img/Certificados/Coursera XS5QK1ADRGFA.pdf" target="_blank" class="btn">Ver Certificado</a>
             </div>
             <div class="certificacion">
                 <embed src="./img/Certificados/Couserea Certificado.pdf" type="application/pdf">
-                <h3>Certificado en Programación Web</h3>
+                <h3>Certificado de Coursera</h3>
                 <a href="./img/Certificados/Couserea Certificado.pdf" target="_blank" class="btn">Ver Certificado</a>
             </div>
         </div>
     
 
     </section>
-
 
     <section id="proyectos">
         <h2>Mis Proyectos</h2>
