--- a/Contenido/PR.html
+++ b/Contenido/PR.html
@@ -3,7 +3,7 @@
 <head>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./PR.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio de Gastón</title>
@@ -223,14 +223,40 @@
         <h2>Mis Proyectos</h2>
         <div class="proyectos-container">
             <div class="proyecto">
-                <h3>Proyecto 1: Blog Estético</h3>
+                <h3>Proyecto 1: Gimnacio</h3>
                 <p>Desarrollo y gestión de un blog especializado en estética corporal.</p>
-                <a href="https://github.com/gaston/blog-estetica" target="_blank">Ver en GitHub</a>
+                <a href="https://github.com/GastonNuz/Proyectos25/tree/dfdbb5460f12228807374433db926d9a0fc91f98/PROYECTO%20GYM" target="_blank">Ver en GitHub</a>
             </div>
             <div class="proyecto">
-                <h3>Proyecto 2: Portfolio</h3>
+                <h3>Proyecto 2: Pasteleria</h3>
                 <p>Página personal creada para mostrar mis habilidades y trabajos.</p>
-                <a href="https://github.com/gaston/portfolio" target="_blank">Ver en GitHub</a>
+                <a href="https://github.com/GastonNuz/Proyectos25/tree/dfdbb5460f12228807374433db926d9a0fc91f98/Pasteleria" target="_blank">Ver en GitHub</a>
+            </div>
+        </div>
+        <br>
+        <div class="proyectos-container">
+            <div class="proyecto">
+                <h3>Proyecto 3: Ruddy</h3>
+                <p>Desarrollo y gestión de un blog especializado en estética corporal.</p>
+                <a href="https://github.com/GastonNuz/Proyectos25/tree/dfdbb5460f12228807374433db926d9a0fc91f98/Ruddy%20Web" target="_blank">Ver en GitHub</a>
+            </div>
+            <div class="proyecto">
+                <h3>Proyecto 4: SharkFit</h3>
+                <p>Página personal creada para mostrar mis habilidades y trabajos.</p>
+                <a href="https://github.com/GastonNuz/Proyectos25/tree/dfdbb5460f12228807374433db926d9a0fc91f98/SharkFit%2002" target="_blank">Ver en GitHub</a>
+            </div>
+        </div>
+        <br>
+        <div class="proyectos-container">
+            <div class="proyecto">
+                <h3>Proyecto 5: SharkFit 2</h3>
+                <p>Desarrollo y gestión de un blog especializado en estética corporal.</p>
+                <a href="https://github.com/GastonNuz/Proyectos25/tree/dfdbb5460f12228807374433db926d9a0fc91f98/Sharkfit" target="_blank">Ver en GitHub</a>
+            </div>
+            <div class="proyecto">
+                <h3>Proyecto 6: Veterinaria</h3>
+                <p>Página personal creada para mostrar mis habilidades y trabajos.</p>
+                <a href="https://github.com/GastonNuz/Proyectos25/tree/dfdbb5460f12228807374433db926d9a0fc91f98/Veterinaria%20Animalia" target="_blank">Ver en GitHub</a>
             </div>
         </div>
     </section>
@@ -239,7 +265,36 @@
     <section id="proyectos">
         <h2>Mis Proyectos</h2>
         <div class="proyectos-container">
-            <!-- Proyectos se llenarán con JavaScript -->
+            <div class="card">
+                <img src="./img/chorizo-mozarella-gnocchi-bake-cropped-9ab73a3.jpg" class="card-img-top" alt="Proyecto Figma">
+                <div class="card-body">
+                  <h5 class="TituloTarjeta">Proyecto en Figma</h5>
+                  <p class="TextoTarjeta">Proyecto en Figma orientado a exponer y representar la creatividad y diseño de una pagina que simula ser para un restarante con dos cartas con.
+                                        Se puede ver la distribucion de los elementos las disposicioon sumado a la paleta de colores y tipografia.
+                  </p>
+                  <a href="https://www.figma.com/proto/QCelchF7C9UXg9m3KE7nRv/Untitled?node-id=7-15&p=f&t=xXMctuNT8VT8K82h-1&scaling=contain&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=7%3A15" class="btn btn-primary">Ver Proyecto</a>
+                </div>
+              </div>
+            <div class="card">
+                <img src="./img//OscarMayer_Homepage_Food_3.jpg" class="card-img-top" alt="Proyecto Figma">
+                <div class="card-body">
+                  <h5 class="TituloTarjeta">Proyecto en Figma</h5>
+                  <p class="TextoTarjeta">Segundo proyecto de Figma orientado a la usalbilidad de un pagina web para un restaurante de comida cacera.
+                  </p>
+                  <a href="https://www.figma.com/design/eQPKpPqdWgkFNHN54rhvcR/La-Cantina-de-Jose?node-id=0-1&t=WU0aij7npBXaERz5-1" class="btn btn-primary">Ver Proyecto</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./img/images.jpeg" class="card-img-top" alt="Proyecto Figma">
+                <div class="card-body">
+                  <h5 class="TituloTarjeta">Proyecto en Figma</h5>
+                  <p class="TextoTarjeta">Tercer proyecto con objetivo de exponer los conocimientos en inegracion de elementos con Figma.
+                  </p>
+                  <a href="https://www.figma.com/design/HVVsS3PLgsYAnRJfCjtCZe/Dise%C3%B1os-y-Prototipos-de-alta-fidelidad-en-Figma?t=WU0aij7npBXaERz5-1" class="btn btn-primary">Ver Proyecto</a>
+                </div>
+            </div>
+        
+
         </div>
     </section>
 
